[package]
name = "tyrael"
version = "0.1.0"
edition = "2024"
description = "Diablo 2 save parser library"
readme = "../README.md"
homepage = "https://karolwojtasiuk.com/Tyrael"
repository = "https://github.com/KarolWojtasiuk/Tyrael"
license = "GPL-3.0-or-later"
keywords = ["diablo", "game", "gamedev", "parser"]
categories = ["games", "parsing"]

[dependencies]
bitter = "0.9.0"
derive_more = { version = "2.1.1", features = [
  "constructor",
  "display",
  "error",
  "from"
] }
fixed = "1.31.0"

[dev-dependencies]
paste = "1.0.15"
test-case = "3.3.1"

[features]
strict = []  # enables checks for magic values and removes mod support
